# Chat-Assistant-AI

./: .dockerignore  .env.example  .eslintrc.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.services.yml  docker-compose.yml  environment.yml  jest.config.ts  package-lock.json  package.json  pyproject.toml  skills-lock.json  sonar-project.properties  tsconfig.build.json  tsconfig.json
.claude/commands/: security.md
.github/actions/setup-environment/: action.yml
.github/workflows/: ci-cd.yml  ci.yml  deploy-hetzner.yml
Report/: Documentation.tex
backend/: .env.example  __init__.py  main.py  package.json  project_rag_implementation_plan.md  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base_agent.py  document_agent.py  general_agent.py  orchestrator_agent.py  recommendation_agent.py  routing_agent.py  weather_agent.py
backend/app/api/: auth.py  chat.py  company.py  config.py  documents.py  router.py  sessions.py
backend/app/cache/: __init__.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/db/: session.py
backend/app/handlers/: __init__.py
backend/app/integrations/: __init__.py  embedding.py  llm_integration.py  vector_db.py  weather_integration.py
backend/app/models/: __init__.py  behavior.py  chat.py  company.py  document.py  message.py  notification.py  profile.py  session.py  user.py
backend/app/pipelines/: __init__.py  ingestion_pipeline.py  recommendation_pipeline.py  retrieval_pipeline.py
backend/app/repositories/: __init__.py  behavior_repository.py  chat_repository.py  notification_repository.py  profile_repository.py  user_repository.py
backend/app/schemas/: __init__.py  behavior.py  chat.py  notification.py  profile.py  recommendation.py  user.py  weather.py
backend/app/services/: __init__.py  behavior_tracking_service.py  chat_service.py  document_service.py  memory_service.py  notification_service.py  orchestrator_service.py  recommendation_service.py  retrieval_service.py  routing_service.py  transcription_runtime.py  user_profile_service.py  weather_service.py
backend/app/utils/: date_utils.py  text_utils.py
backend/config/: backend.yaml  guardrail_policy.yaml
backend/scripts/: create_admin.py  dev.cjs  seed_company_data.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_profile.py
backend/tests/test_services/: test_orchestrator_service.py  test_recommendation_service.py  test_routing_service.py
config/: app_config.yaml  backend.yaml  frontend.yaml  llm_config.yaml
coverage/: coverage_gate.py
docs/: 01_general.md  02_dependencies.md  03_quick_setup.md  04_contribution_principles.md  api.md  app_flowchart.md  app_flowchart_render.html  architecture.md  architektur_review.tex  backend-deployment.md  codequality.md  doc.tex  idea.md  postgres-docker-setup.md  presentation_copilot_prompt.md  setup.md
docs/architecture/adr/: 007_frontend_setup.md  008_transform_to_microservices.md  01_frontend_chatbot.md  02_authentication_screen.md  03_message_window.md  04_dashboard.md  05_acc_settings.md  06_feature_of_interest.md
docs/services/: README.md  go.md  javascript.md  python.md  typescript.md
frontend/: .eslintrc.json  Dockerfile  README.md  app.py  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/components/: auth_component.py  chat_component.py  notification_badge.py  recommendation_card.py  weather_widget.py
frontend/config/: frontend.yaml
frontend/pages/: 1_Chat.py  2_Recommendations.py  3_Weather.py  4_Notifications.py  5_Profile.py  6_Documents.py
frontend/public/: README.md
frontend/services/: api_client.py  auth_service.py  chat_service.py  document_service.py  notification_service.py  profile_service.py  recommendation_service.py  weather_service.py
frontend/src/: App.tsx  env.d.ts  main.tsx  vite-env.d.ts
frontend/src/app/: README.md
frontend/src/entities/: README.md
frontend/src/features/: README.md
frontend/src/pages/: README.md
frontend/state/: session_state.py
frontend/tests/: README.md
frontend/utils/: formatters.py
migrations/: env.py
migrations/versions/: 7146f21e6688_add_company_and_personal_desk_tables.py  bae331af7ba5_add_user_id_to_chat_sessions.py  de626bd39ec8_baseline_schema.py
scripts/: setup-dev.ps1
shared/: constants.py
tests/: README.md  test_app.py  test_auth_component.py  test_chat_service.py  test_config_endpoint.py  test_frontend_app.py  test_robustness.py  test_runtime_config.py  test_session_state.py
tests/auth/: conftest.py  test_auth_endpoints.py  test_auth_service.py  test_authtoken_decorator.py  test_jwt_dependency.py  test_security_hardening.py
tests/companyfeature/: conftest.py  test_company_api.py
tests/ragfeature/: conftest.py  ground_truth_corpus.py  test_chat_pipeline.py  test_chat_stream_endpoint.py  test_chunker.py  test_documents_api.py  test_embedder.py  test_llm_client.py  test_loader.py  test_message_persistence.py  test_migrations.py  test_rag_chain.py  test_rag_pipeline.py  test_rate_limit.py  test_retrieval_validation.py  test_retriever.py  test_session_memory.py  test_streaming.py  test_vectordb.py
(+180 files in other folders)
