[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-assistant-ai"
version = "0.1.0"
description = "Modular multi-agent AI assistant"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Chat Assistant Team" }
]
dependencies = []

[project.optional-dependencies]
# Keep production empty for now until Docker baseline tests are validated.
production = []

backend = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "motor>=3.6.0",
  "pymongo>=4.8.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.6.0",
  "requests>=2.32.0",
  "httpx>=0.27.0",
  "chromadb>=0.5.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "tenacity>=9.0.0",
  "orjson>=3.10.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2"
]

frontend = [
  "streamlit>=1.38.0",
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "polars>=1.8.0",
  "plotly>=5.24.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0"
]

development = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "motor>=3.6.0",
  "pymongo>=4.8.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.6.0",
  "requests>=2.32.0",
  "httpx>=0.27.0",
  "chromadb>=0.5.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "tenacity>=9.0.0",
  "orjson>=3.10.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "flake8>=7.1.0",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "bandit>=1.7.0",
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "polars>=1.8.0",
  "plotly>=5.24.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
  "networkx>=3.3",
  "fakeredis>=2.24.0",
  "duckdb>=1.1.0"
]

all = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "motor>=3.6.0",
  "pymongo>=4.8.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.6.0",
  "requests>=2.32.0",
  "httpx>=0.27.0",
  "chromadb>=0.5.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "tenacity>=9.0.0",
  "orjson>=3.10.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "streamlit>=1.38.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "flake8>=7.1.0",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "bandit>=1.7.0",
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "polars>=1.8.0",
  "plotly>=5.24.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
  "networkx>=3.3",
  "fakeredis>=2.24.0",
  "duckdb>=1.1.0"
]

[tool.pytest.ini_options]
addopts = "-q --cov=. --cov-report=term-missing --cov-report=xml:coverage/coverage-python.xml"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 140
target-version = ["py311"]
exclude = "(\\.git|\\.venv|venv|build|dist|node_modules)"

[tool.flake8]
max-line-length = 140
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist", "node_modules"]

[tool.bandit]
exclude_dirs = [".git", "__pycache__", ".venv", "venv", "build", "dist", "node_modules", "tests"]
skips = ["B101"]

[tool.mypy]
python_version = "3.11"
pretty = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build", "dist", "node_modules", "venv", ".venv"]

[tool.chat_assistant]
# Retry policy for API access: at most 3 attempts.
api_retry_max_attempts = 3
# Prefer JSON configs by default; YAML remains supported for edge cases.
prefer_json_config = true
