[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-assistant-ai"
version = "0.1.0"
description = "AI-powered chat assistant with backend and frontend."
authors = [
    { name = "Dominic Bechtold", email = "dominic.bechtold@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Shared runtime dependencies
    "pydantic==2.9.2",
    "httpx==0.27.2",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2"
]

[project.optional-dependencies]
backend = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "motor==3.6.0",
    "pymongo==4.9.2",
    "pydantic-settings==2.5.2",
    "email-validator==2.2.0",
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "sentence-transformers==3.1.1",
    "chromadb==0.5.15",
    "langchain==0.3.27",
    "langchain-openai==0.2.3",
    "langchain-community==0.3.27",
    "openai==1.52.0",
    "python-multipart==0.0.22"
]
frontend = [
    "streamlit==1.39.0"
]
test = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0"
]
lint = [
    "flake8==7.1.1",
    "black==25.1.0"
]
security = [
    "bandit==1.7.10"
]
all = [
    # Combined convenience extra for CI/CD and local full setup.
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "motor==3.6.0",
    "pymongo==4.9.2",
    "pydantic-settings==2.5.2",
    "email-validator==2.2.0",
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "sentence-transformers==3.1.1",
    "chromadb==0.5.15",
    "langchain==0.3.27",
    "langchain-openai==0.2.3",
    "langchain-community==0.3.27",
    "openai==1.52.0",
    "streamlit==1.39.0",
    "python-multipart==0.0.22",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "flake8==7.1.1",
    "black==25.1.0",
    "bandit==1.7.10"
]

[tool.setuptools.packages.find]
where = ["backend", "frontend", "shared"]
